fixed summary card title wrap issue

--- a/packages/govuk-frontend/src/govuk/components/summary-list/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/summary-list/_index.scss
@@ -207,7 +207,11 @@
     @include govuk-text-colour;
     margin: govuk-spacing(1) govuk-spacing(4) govuk-spacing(2) 0;
 
+    word-wrap: break-word; // Fallback for older browsers only
+    overflow-wrap: break-word;
+
     @media #{govuk-from-breakpoint(tablet)} {
+      min-width: 0;
       margin-bottom: govuk-spacing(1);
     }
   }
